--- a/hvrskyworthvr/src/main/res/layout/fragment_video.xml
+++ b/hvrskyworthvr/src/main/res/layout/fragment_video.xml
@@ -12,7 +12,6 @@
         android:background="@color/color_white"
         app:elevation="0dp">
 
-
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,7 +23,7 @@
                 android:layout_marginTop="24dp"
                 android:clipChildren="false"
                 android:layerType="software"
-                app:layout_collapseMode="pin">
+                app:layout_collapseMode="parallax">
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/vp_video_banner_root"
