--- a/hvrskyworthvr/src/main/res/values/colors.xml
+++ b/hvrskyworthvr/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="color_333">#333333</color>
     <color name="color_D9">#D9D9D9</color>
     <color name="color_F3">#F3F3F3</color>
+    <color name="color_F2">#F2F2F2</color>
     <color name="color_72F3">#B8F3F3F3</color>
     <color name="color_white">#FFFFFF</color>
 
