--- a/hvrskyworthvr/src/main/res/values/styles.xml
+++ b/hvrskyworthvr/src/main/res/values/styles.xml
@@ -37,4 +37,26 @@
         <item name="android:windowExitAnimation">@anim/dialog_anim_bottom_out</item>
     </style>
 
+    <style name="VrModeMainDialog" parent="@style/AlertDialog.AppCompat.Light">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@android:color/transparent
+        </item><!-- 设置dialog背景为透明背景 -->
+        <item name="android:backgroundDimAmount">0.3</item>
+        <item name="android:backgroundDimEnabled">false</item><!-- 设置dialog背景不变暗 -->
+    </style>
+
+    <style name="VrModeLinkingDialog" parent="@style/AlertDialog.AppCompat.Light">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@android:color/transparent
+        </item><!-- 设置dialog背景为透明背景 -->
+        <item name="android:backgroundDimAmount">0.6</item>
+        <item name="android:backgroundDimEnabled">true</item><!-- 设置dialog背景不变暗 -->
+    </style>
+
 </resources>
