--- a/hvrskyworthvr/src/main/res/layout/exo_control_view_landscape_normal.xml
+++ b/hvrskyworthvr/src/main/res/layout/exo_control_view_landscape_normal.xml
@@ -23,18 +23,15 @@
         android:id="@id/exo_text_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="350dp"
         android:ellipsize="end"
-        android:maxLines="1"
-        android:singleLine="true"
+        android:maxLines="2"
         android:textColor="@color/color_white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/exo_back"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_max="wrap"
-        tools:text="年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀" />
+        tools:text="年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀" />
 
     <ImageButton
         android:id="@id/exo_reset_content"
