--- a/hvrskyworthvr/src/main/res/layout/exo_control_view_landscape_normal.xml
+++ b/hvrskyworthvr/src/main/res/layout/exo_control_view_landscape_normal.xml
@@ -8,11 +8,10 @@
 
     <ImageButton
         android:id="@id/exo_back"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="15dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:background="@null"
-        android:padding="5dp"
+        android:padding="20dp"
         android:scaleType="center"
         android:src="@drawable/icon_exo_back"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +25,7 @@
         android:layout_marginEnd="350dp"
         android:ellipsize="end"
         android:maxLines="2"
+        android:layout_marginTop="8dp"
         android:textColor="@color/color_white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
