--- a/hvrskyworthvr/src/main/res/values/styles.xml
+++ b/hvrskyworthvr/src/main/res/values/styles.xml
@@ -42,8 +42,7 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowBackground">@android:color/transparent
-        </item><!-- 设置dialog背景为透明背景 -->
+        <item name="android:windowBackground">@android:color/transparent</item><!-- 设置dialog背景为透明背景 -->
         <item name="android:backgroundDimAmount">0.3</item>
         <item name="android:backgroundDimEnabled">false</item><!-- 设置dialog背景不变暗 -->
     </style>
