--- a/hvrskyworthvr/src/main/res/values/colors.xml
+++ b/hvrskyworthvr/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="color_72F3">#B8F3F3F3</color>
     <color name="color_white">#FFFFFF</color>
     <color name="color_black">#000000</color>
+    <color name="color_F6">#F6F6F6</color>
 
     <color name="color_setting_id">#2C2C33</color>
     <color name="color_setting_id_create">#5A5A62</color>
