--- a/hvrskyworthvr/src/main/res/layout/fragment_about.xml
+++ b/hvrskyworthvr/src/main/res/layout/fragment_about.xml
@@ -13,9 +13,9 @@
         android:layout_marginStart="22dp"
         android:layout_marginTop="14dp"
         android:padding="10dp"
-        android:text="中图云创智能科技(北京)有限公司"
-        android:textColor="@color/color_333"
-        android:textSize="22sp"
+        android:text="中国铁路文工团"
+        android:textColor="@color/color_setting_id"
+        android:textSize="26sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -71,11 +71,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="中图云创 版权所有\nCopyright © 2020 ChinaFocus. All rights reserved."
-        android:textColor="@color/color_D9"
+        android:textColor="@color/color_333"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
