增加了协议web页面

--- a/hvrskyworthvr/src/main/res/layout/dialog_vr_mode_linking_video.xml
+++ b/hvrskyworthvr/src/main/res/layout/dialog_vr_mode_linking_video.xml
@@ -19,7 +19,7 @@
         android:id="@+id/appCompatTextView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="带上VR眼镜即可"
+        android:text="戴上VR眼镜 立即同步观看"
         android:textColor="#F2F2F2"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView3"
@@ -34,11 +34,8 @@
         android:layout_height="52dp"
         android:layout_marginTop="45dp"
         android:background="@drawable/shape_vr_mode_linking_back_bg"
-        android:drawableStart="@drawable/sky_worth_vr_mode_linking_back"
-        android:drawablePadding="-25dp"
         android:gravity="center"
-        android:paddingStart="36dp"
-        android:text="返回屏幕模式"
+        android:text="知道了"
         android:textColor="@color/color_F2"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
