--- a/hvrskyworthvr/src/main/res/layout/exo_control_view_landscape_normal.xml
+++ b/hvrskyworthvr/src/main/res/layout/exo_control_view_landscape_normal.xml
@@ -182,7 +182,7 @@
         android:paddingTop="5dp"
         android:paddingEnd="26dp"
         android:paddingBottom="5dp"
-        android:text="正在同步展示VR眼镜中的视频画面"
+        android:text="正在同步展示VR眼镜中的视频"
         android:textColor="@color/color_F2"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -224,7 +224,7 @@
         android:id="@+id/group_connect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:visibility="visible"
         app:constraint_referenced_ids="appCompatImageView4,appCompatTextView4,pb_time_bar" />
 
 
