--- a/hvrskyworthvr/src/main/res/layout/item_banner.xml
+++ b/hvrskyworthvr/src/main/res/layout/item_banner.xml
@@ -33,13 +33,14 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_banner_des"
-        android:layout_width="360dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/color_white"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/tv_banner_title"
         app:layout_constraintStart_toStartOf="@+id/tv_banner_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_banner_title"
         tools:text="张掖丹霞地貌群，俗称“张掖丹霞”，由“七彩丹霞”和“冰沟丹霞”组成。如用文字来表达，仅有两个字震撼。其气势之磅礴、场面之壮观、造型之奇特、色彩之斑斓，大自然的鬼斧神工，令人惊叹。" />
