--- a/huaweimdm/src/main/res/layout/mdm_activity_main.xml
+++ b/huaweimdm/src/main/res/layout/mdm_activity_main.xml
@@ -2,7 +2,10 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff">
+    android:background="#fff"
+    android:paddingStart="20dp"
+    android:paddingEnd="20dp"
+    android:paddingBottom="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,10 +14,10 @@
 
         <TextView
             android:id="@+id/tv_version"
-            android:textColor="#f00"
-            android:textSize="15sp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textColor="#f00"
+            android:textSize="15sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -596,14 +599,14 @@
 
         </LinearLayout>
 
-<!--        <Button-->
-<!--            android:visibility="gone"-->
-<!--            android:id="@+id/reboot"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:text="@string/reboot_device"-->
-<!--            android:textSize="15sp" />-->
+        <!--        <Button-->
+        <!--            android:visibility="gone"-->
+        <!--            android:id="@+id/reboot"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="20dp"-->
+        <!--            android:text="@string/reboot_device"-->
+        <!--            android:textSize="15sp" />-->
 
         <Button
             android:id="@+id/bt_silent_active_admin"
@@ -614,20 +617,20 @@
             android:textSize="15sp" />
 
         <Button
-            android:visibility="gone"
             android:id="@+id/bt_silent_install"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/silent_install"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/enter_splash"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/enter_splash"
+            android:text="@string/all_done"
             android:textSize="15sp" />
 
     </LinearLayout>
