--- a/hvrskyworthvr/src/main/res/layout/fragment_about.xml
+++ b/hvrskyworthvr/src/main/res/layout/fragment_about.xml
@@ -95,5 +95,13 @@
         app:layout_constraintStart_toStartOf="@+id/tv_about_user_protocol"
         app:layout_constraintTop_toBottomOf="@+id/tv_about_user_protocol" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_setting_mdm"
+        android:layout_width="200dp"
+        android:src="@color/color_white"
+        android:layout_height="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
