--- a/hvrskyworthvr/src/main/res/layout/activity_rtr_main.xml
+++ b/hvrskyworthvr/src/main/res/layout/activity_rtr_main.xml
@@ -6,7 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".rtr.main.RtrMainActivity">
 
-    <include layout="@layout/include_rtr_video_media_player_view" />
+    <com.chinafocus.hvrskyworthvr.ui.widget.BgMediaPlayerViewGroup
+        android:id="@+id/view_bg_media_player"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_video_list"
