--- a/hvrskyworthvr/src/main/res/values/colors.xml
+++ b/hvrskyworthvr/src/main/res/values/colors.xml
@@ -17,6 +17,9 @@
     <color name="color_black">#000000</color>
     <color name="color_F6">#F6F6F6</color>
 
+    <color name="color_theme_cold">#000822</color>
+    <color name="color_theme_warm">#201100</color>
+
     <color name="color_setting_id">#2C2C33</color>
     <color name="color_setting_id_create">#5A5A62</color>
     <color name="color_setting_status_gray">#A0A0A3</color>
