--- a/hvrskyworthvr/src/main/res/layout/include_rtr_video_media_player_view.xml
+++ b/hvrskyworthvr/src/main/res/layout/include_rtr_video_media_player_view.xml
@@ -4,18 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.chinafocus.hvrskyworthvr.exo.ui.PlayerView
-        android:id="@+id/player_view_surface_land"
+    <SurfaceView
+        android:id="@+id/player_surface_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:controller_layout_id="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:resize_mode="fill"
-        app:show_buffering="never"
-        app:surface_type="surface_view" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.chinafocus.hvrskyworthvr.ui.widget.BackgroundAnimationRelativeLayout
         android:id="@+id/view_background_change_animation"
